--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
     "dependencies": {
         "chalk": "^4.1.2",
         "typescript": "^5.2.2"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.23.0",
+        "@babel/core": "^7.23.2",
+        "@babel/plugin-syntax-jsx": "^7.22.5",
+        "@babel/plugin-transform-react-jsx": "^7.22.15",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-react": "^7.22.15"
     }
 }
