--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "license": "Apache-2.0",
     "dependencies": {
         "chalk": "^4.1.2",
+        "image-to-ascii": "^3.2.0",
+        "puppeteer": "^21.5.1",
         "typescript": "^5.2.2"
     },
     "devDependencies": {
@@ -15,7 +17,8 @@
         "@babel/plugin-syntax-jsx": "^7.22.5",
         "@babel/plugin-transform-react-jsx": "^7.22.15",
         "@babel/preset-env": "^7.23.2",
-        "@babel/preset-react": "^7.22.15"
+        "@babel/preset-react": "^7.22.15",
+        "@types/ascii-art": "^1.4.3"
     },
     "scripts": {
         "test": "npx babel tests --out-dir tests"
