--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "strict": true,
         "skipLibCheck": true,
         "outDir": "./dist",
-        "declaration": true
+        "declaration": true,
+        "noImplicitAny": false
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
