--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "linterf",
     "version": "0.1.0",
-    "description": "nodecli-gui (deep ver.)",
+    "description": "Line interface for easier use of cli",
     "main": "dist/index.js",
     "author": "ice1",
     "license": "Apache-2.0",
