--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
         "declaration": true,
         "noImplicitAny": false
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "scripts/**/*"],
     "exclude": ["node_modules"]
 }
