PublishConfig key generated for github workflow use

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     },
     "scripts": {
         "test": "npx babel tests --out-dir tests"
+    },
+    "publishConfig": {
+        "@ice1:registry": "https://npm.pkg.github.com"
     }
 }
