--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     },
     "publishConfig": {
         "@ice1:registry": "https://npm.pkg.github.com"
-    }
+    },
+    "repository": "https://github.com/ICe1BotMaker/linterf"
 }
