Github Workflow to publish package

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-@ice1:registry=https://npm.pkg.github.com
+@ice1:registry=https://npm.pkg.github.//npm.pkg.github.com/:_authToken=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
