--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "linterf",
-    "version": "2.9.16",
+    "version": "2.9.17",
     "description": "Line interface for easier use of cli",
     "main": "dist/src/index.js",
     "author": "ice1",
@@ -26,7 +26,10 @@
         "test": "npx babel tests --out-dir tests"
     },
     "publishConfig": {
-        "@ice1:registry": "https://npm.pkg.github.com"
+        "registry": "https://npm.pkg.github.com"
     },
-    "repository": "https://github.com/ICe1BotMaker/linterf"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ICe1BotMaker/linterf"
+    }
 }
