--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "test": "npx babel tests --out-dir tests"
     },
     "publishConfig": {
-        "registry": "https://npm.pkg.github.com"
+        "ice1:registry": "https://npm.pkg.github.com"
     },
     "repository": {
         "type": "git",
