Github Workflow to publish package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@ice1/linterf",
+    "name": "linterf",
     "version": "2.9.31",
     "description": "Line interface for easier use of cli",
     "main": "dist/src/index.js",
