Github Workflow to publish package

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-//npm.pkg.github.com/:_authToken=%GITHUB_TOKEN%
-=======
-//npm.pkg.github.com/:_authToken="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"
->>>>>>> d75f6e5e5142160ee0a0725f76e3497eb8f442c7
+@ice1:registry=https://npm.pkg.github.com
