--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "linterf",
-    "version": "2.9.36",
+    "version": "2.9.37",
     "description": "Line interface for easier use of cli",
     "main": "dist/src/index.js",
     "author": "ice1",
@@ -28,5 +28,13 @@
     "publishConfig": {
         "@ice1:registry": "https://npm.pkg.github.com"
     },
-    "repository": "https://github.com/ICe1BotMaker/linterf"
+    "repository": "https://github.com/ICe1BotMaker/linterf",
+    "keywords": [
+        "linterf",
+        "cli",
+        "3d",
+        "argument",
+        "argv",
+        "args"
+    ]
 }
